# kenko-nvr

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.example.yaml  go.mod  go.sum
.github/workflows/: ci.yml
cmd/nvr/: main.go
docs/: ai-detection-design.md
face-service/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
face-service/app/: __init__.py  main.py
face-service/tests/: test_analyze.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: sw.js
frontend/src/: main.tsx  styles.css
internal/api/: auth.go  auth_test.go  cameras.go  events.go  face_thumb.go  faces.go  faces_corrections.go  faces_corrections_test.go  faces_test.go  gb28181.go  mse.go  notifications.go  onvif.go  recording_hls.go  recording_hls_test.go  recordings.go  recordings_integration_test.go  recordings_test.go  server.go  settings.go  settings_test.go  stats.go  stream.go  system.go  talk.go  users.go  webrtc.go  ws.go
internal/backchannel/: sender.go
internal/config/: config.go  config_test.go
internal/core/: source.go  stream.go  stream_test.go  types.go
internal/database/: camera_store.go  database.go  database_test.go  epochms_test.go  event_store.go  extra_test.go  face.go  face_link_store.go  face_store.go  face_store_test.go  face_track_store.go  migrations.go  models.go  recording_store.go  settings_store.go  user_store.go
internal/face/: client.go  cluster.go  cluster_test.go  extract.go  extract_test.go  gallery.go  gallery_test.go  live.go  live_integration_test.go  (+8 more)
(+97 files in other folders)
